
Twin 0.4.6 and 0.5.1 install the header 'Tw/Tw1.h', not 'Tw/Tw_1.h'.
----------------------------------------------------------------------
Thu Jun  2 13:36:23 2005                        Michael Jennings (mej)

A couple small fixes from Yasufumi Haga <yasufumi.haga@nifty.com> to
the man page and the handling of multi-byte fonts.
----------------------------------------------------------------------
Mon Jun 13 19:28:19 2005                        Michael Jennings (mej)

Cleanups and optimizations from Tres Melton <tres@mindspring.com>.
----------------------------------------------------------------------
Tue Jun 14 15:36:09 2005                        Michael Jennings (mej)

Added SSE2 support patch thanks to Tres Melton <tres@mindspring.com>
and John Ellson <ellson@research.att.com>.
----------------------------------------------------------------------
Sun Jun 26 21:05:03 2005                        Michael Jennings (mej)

Attempt to fix autogen.sh for Gentoo and Solaris.

Detect and avoid E 0.17 faking E 0.16.x's IPC mechanisms.
----------------------------------------------------------------------
Tue Aug 16 10:48:12 2005                        Michael Jennings (mej)

Applied a fix from benny@sweetfactory.org for a typo in keysym
handling.

Fixed percent signs in menu files thanks to Yasufumi Haga
<yasufumi.haga@nifty.com>.

Fixed E IPC version check to work with old and new schemes.
----------------------------------------------------------------------
Thu Sep  1 02:12:29 2005                        Michael Jennings (mej)

Fix abort stuff.
----------------------------------------------------------------------
Thu Sep  1 02:16:17 2005                        Michael Jennings (mej)

Fix but disable vt100 answerbacks.
----------------------------------------------------------------------
Thu Sep 15 21:55:34 2005                        Michael Jennings (mej)

Support NetWM startup ID's.
----------------------------------------------------------------------